# PrimeNexus

./: .dockerignore  .gitignore  ARCHITECTURE.md  ARCHITECTURE_CHOICES.md  DOCKER_SETUP.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  llm_client.py  main.py  requirements.txt  run.bat  run.sh
backend/agents/: llm_provider.py
backend/database/: __init__.py  base.py  models.py  service.py
backend/generated_images/: .gitkeep
backend/migrations/: README.md  add_user_fields_manual.sql  env.py
backend/migrations/versions/: 001_initial_schema.py  002_add_user_fields.py
backend/scripts/: README.md  __init__.py  apply_user_fields_migration.py  run_migration.ps1  run_migrations.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/components/: ChatInterface.tsx  DatabaseBrowser.tsx  FractalViewer.tsx  RightSidebar.tsx  Settings.tsx  Sidebar.tsx  Tooltip.tsx
frontend/components/fractal/: ColorSchemeSelector.tsx  JuliaViewer.tsx  (+10 more)
frontend/src/: App.tsx  index.css  vite-env.d.ts
services/core-api/: Dockerfile  entrypoint.sh  llm_client.py  main.py  requirements.txt
services/rust-service/: .dockerignore  Cargo.toml  Dockerfile  README.md
services/rust-service/src/: main.rs  mandelbrot.rs
services/rust-service/src/fractals/: julia.rs  koch.rs  mandelbrot.rs  mod.rs  sierpinski.rs  traits.rs
services/rust-service/src/rendering/: colors.rs  mod.rs  png_encoder.rs  svg_builder.rs
services/rust-service/src/utils/: validation.rs
(+37 files in other folders)
