[package]
name = "rust-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
rayon = "1.8"
tracing = "0.1"
tracing-subscriber = "0.3"
